--- a/skeleton/public/css/application.css
+++ b/skeleton/public/css/application.css
@@ -6,3 +6,13 @@ body {
 p {
   color: white;
 }
+
+label {
+  color: white;
+}
+
+footer {
+  color: white;
+  text-align: center;
+  margin-top: 10%;
+}
