landing page works

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,6 +11,7 @@
   <input type='submit' value='Get your outfit!' id='submit-zip'>
 </form>
 
+
 <div class="container">
   <h1>Sign In</h1>
 
@@ -55,5 +56,5 @@
 </div>
 <%else%>
 
-  <button class="logout" id="">Logout</button>
+  <button class="logout">Logout</button>
 <%end%>
