--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,6 +1,55 @@
+/*.background{
+/*    position: absolute;
+    z-index: -1;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: url('http://i.imgur.com/ulR2kk8.jpg') no-repeat center center;
+    background-size: cover;
+    opacity: .4;
+    width: 100%;
+    height: 100%;*/
+    p/*osition: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('http://i.imgur.com/ulR2kk8.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100%;
+    opacity: 0.4;
+    z-index: -1;
+    filter:alpha(opacity=40);*/
+}*/
+
+#logout {
+  opacity: 1;
+  z-index: 1;
+  font-weight: bolder;
+}
+
+#everything-else{
+  opacity: 1;
+  z-index: 1;
+  font-weight: bolder;
+}
+
 body {
-  background: url( 'http://i.imgur.com/ulR2kk8.jpg' ) no-repeat center center fixed;
+  background: url( 'http://www.hdwallpaperscool.com/wp-content/uploads/2014/09/road-and-cloudy-blue-sky-new-desktop-wallpapers-in-high-resolution-fullscreen.jpg' ) no-repeat center center fixed;
   background-size: cover;
+  cursor: url('http://i.imgur.com/kBVxu07.jpg'), default;
+  /*position: relative;
+  z-index: 1;
+  opacity: 1;*/
+  /*font-family: tahoma, helvetica, arial, sans-serif;
+    font-size: 12px;
+    text-align: center;
+    background: #000;
+    color: #ddd4d4;
+    padding-top: 12px;
+    line-height: 2;*/
 }
 
 .white {
