css for landing page

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,10 +1,10 @@
-<p class="white">Hello!</p>
+<h3 class="white mid-page">Hello!</h3>
 
 
 
 <%if !logged_in?%>
 
-<p class="white">Put your zipcode here!</p>
+<h5 class="white mid-page">Put your zipcode here!</h5>
 
 <form>
   <input type='text' name="zip" id='zipcode'>
