--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,7 +15,7 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
-
+  <link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
   <title></title>
 </head>
 <body>
@@ -30,7 +30,7 @@
   </div>
   <div id='everything-else'>
     <%= yield %>
-    <footer class="white">Weather info courtesy of Weather Underground!</footer>
+    <footer class="white" id="footer-color">Weather info courtesy of Weather Underground!</footer>
   </div>
   </div>
 </body>
