--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,59 +1,13 @@
-/*.background{
-/*    position: absolute;
-    z-index: -1;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: url('http://i.imgur.com/ulR2kk8.jpg') no-repeat center center;
-    background-size: cover;
-    opacity: .4;
-    width: 100%;
-    height: 100%;*/
-    p/*osition: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('http://i.imgur.com/ulR2kk8.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100%;
-    opacity: 0.4;
-    z-index: -1;
-    filter:alpha(opacity=40);*/
-}*/
-
-#logout {
-  opacity: 1;
-  z-index: 1;
-  font-weight: bolder;
-}
-
-#everything-else{
-  opacity: 1;
-  z-index: 1;
-  font-weight: bolder;
-}
-
 body {
   background: url( 'http://www.hdwallpaperscool.com/wp-content/uploads/2014/09/road-and-cloudy-blue-sky-new-desktop-wallpapers-in-high-resolution-fullscreen.jpg' ) no-repeat center center fixed;
   background-size: cover;
   cursor: url('http://i.imgur.com/kBVxu07.jpg'), default;
-  /*position: relative;
-  z-index: 1;
-  opacity: 1;*/
-  /*font-family: tahoma, helvetica, arial, sans-serif;
-    font-size: 12px;
-    text-align: center;
-    background: #000;
-    color: #ddd4d4;
-    padding-top: 12px;
-    line-height: 2;*/
 }
 
 .white {
-  color: white;
+  color: #FFFF99;
+  font-family: 'Crimson Text', serif;
+  font-size: 1.5em;
 }
 
 footer {
@@ -64,3 +18,37 @@ footer {
 fieldset{
   width: 17%;
 }
+
+.mid-page {
+  margin-left: 30%;
+}
+
+h5 {
+  font-size: 1.25em;
+}
+
+h3 {
+  font-size: 1.5em;
+  margin-top: 50px;
+}
+
+.landing-page {
+  margin-left: 30%;
+  margin-right: 27%;
+  margin-top: 10%;
+  margin-bottom: 30%;
+}
+
+.weather_heading {
+  text-align: center;
+}
+
+#footer-color {
+  /*color: #335233;*/
+  font-size: 1em;
+  /*border: 1px solid black;*/
+  width: 40%;
+  margin: auto;
+}
+
+
