--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,17 +6,14 @@
 
 <div class="side-by-side">
 
-  <div class='sign-inz'>
-    <%= erb :_sign_in, :layout => false%>
-  </div>
-
-
 
   <div class='site-name white'>
     <h1>Who Says? Drew Says!</h1>
   </div>
 
-
+<div class='sign-inz'>
+    <%= erb :_sign_in, :layout => false%>
+  </div>
 
   <div class='sign_upz'>
     <%= erb :_sign_up, :layout => false%>
@@ -24,7 +21,7 @@
 </div>
 
 <div class="beginning">
-  <h5 class="white">Put your zipcode here!</h5>
+  <h5 class="white">Don't want an account? Put your zipcode here!</h5>
   <form class="mid-page">
     <input type='text' name="zip" id='zipcode'>
     <input type='submit' value='Get your outfit!' id='submit-zip'>
