--- a/public/css/application.css
+++ b/public/css/application.css
@@ -39,6 +39,9 @@ h3 {
   margin-right: 27%;
   margin-top: 10%;
   margin-bottom: 30%;
+  padding: .5em;
+  background-color: rgba(0,0,0,0.2);
+  border-radius: 25px;
 }
 
 .weather_heading {
@@ -82,11 +85,11 @@ labelz {
 }
 
 .beginning {
-  width: 30%;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: -20%;
-
+  width: 29.65%;
+  padding-left: 1%;
+  margin-top: -18%;
+  height: 40%;
+  background-color: rgba(0,0,0,0.2);
 }
 
 #logout {
@@ -94,18 +97,30 @@ labelz {
 }
 
 .site-name {
-  width: 33%;
+  width: 31%;
   display: inline;
-  float: none;
+  float: right;
+  height: 23%;
+  margin-top: 3%;
+  padding-left: 1%;
+  background-color: rgba(0,0,0,0.2);
 }
 
 .sign-inz {
-  width: 33%;
-  float: left;
-  /*margin-top: 9%;*/
+  width: 20%;
+  height: 23%;
+  margin-top: 3%;
+  padding-left: 1%;
+  margin-left: 20%;
+  float: right;
+  background-color: rgba(0,0,0,0.2);
 }
 
 .sign_upz{
   width: 33%;
   float: right;
+  height: 23%;
+  margin-top: 3%;
+  padding-right: 1%;
+  background-color: rgba(0,0,0,0.2);
 }
