--- a/public/css/application.css
+++ b/public/css/application.css
@@ -41,7 +41,7 @@ h3 {
   margin-bottom: 30%;
   padding: .5em;
   background-color: rgba(0,0,0,0.2);
-  border-radius: 25px;
+  border-radius: 15px;
 }
 
 .weather_heading {
@@ -123,4 +123,19 @@ labelz {
   margin-top: 3%;
   padding-right: 1%;
   background-color: rgba(0,0,0,0.2);
+}
+
+.zip-code-change{
+  width: 35%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -15%;
+  padding-left: 8px;
+  padding-bottom: 10px;
+  background-color: rgba(0,0,0,0.2);
+  border-radius: 15px;
+}
+
+.zipcode-button {
+  color: #4C4C4C;
 }
