--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,7 +18,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
 
- <link href='http://fonts.googleapis.com/css?family=Dosis|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+ <link href='https://fonts.googleapis.com/css?family=Dosis|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
   <title></title>
 </head>
 <body>
