--- a/public/css/application.css
+++ b/public/css/application.css
@@ -23,7 +23,7 @@ footer {
 }
 
 field-set{
-  width: 17%;
+  /*width: 17%;*/
 }
 
 h5 {
@@ -38,13 +38,14 @@ h3 {
 }
 
 .landing-page {
-  margin-left: 30%;
-  margin-right: 27%;
+  /*margin-left: 30%;
+  margin-right: 27%;*/
   margin-top: 10%;
   margin-bottom: 30%;
   padding: .5em;
   background-color: rgba(0,0,0,0.2);
   border-radius: 15px;
+  text-align: center;
 }
 
 .weather_heading {
@@ -55,9 +56,9 @@ h3 {
   /*color: #335233;*/
   font-size: 1em;
   /*border: 1px solid black;*/
-  width: 40%;
+  /*width: 40%;
   margin-right: auto;
-  margin-left: auto;
+  margin-left: auto;*/
   margin-top: 38%;
   font-weight: bold;
 }
@@ -68,19 +69,19 @@ labelz {
 }
 
 .name {
-  margin-right: 74px;
+  /*margin-right: 74px;*/
 }
 
 .email {
-  margin-right: 75px;
+  /*margin-right: 75px;*/
 }
 
 .password {
-  margin-right: 45px;
+  /*margin-right: 45px;*/
 }
 
 .e-mail {
-  margin-right: 31px;
+  /*margin-right: 31px;*/
 }
 
 .side-by-side {
@@ -93,56 +94,56 @@ labelz {
   width: 29.65%;
   padding-left: 1%;
   padding-bottom: 2%;
-  margin-top: -18%;
+  /*margin-top: -18%;*/
   height: 40%;
   background-color: rgba(0,0,0,0.2);
 }
 
 #logout {
-  width: 30%;
+  /*width: 30%;*/
 }
 
 .site-name {
-  width: 31%;
-  display: inline;
-  float: right;
+  /*width: 31%;*/
+  /*display: inline;*/
+  float: center;
   height: 23%;
   margin-top: 3%;
   padding-left: 1%;
   background-color: rgba(0,0,0,0.2);
+  text-align: center;
 }
 
 .sign-inz {
-  width: 20%;
+  /*width: 20%;*/
   height: 23%;
   margin-top: 3%;
   padding-left: 1%;
   padding-bottom: 2%;
-  margin-left: 20%;
+  margin-left: 2%;
   float: right;
   background-color: rgba(0,0,0,0.2);
 }
 
 .sign_upz{
-  width: 33%;
+  /*width: 33%;*/
   float: right;
   height: 23%;
   margin-top: 3%;
-  padding-right: 1%;
-  padding-left: 1%;
+  /*padding-right: 1%;
+  padding-left: 1%;*/
   padding-bottom: 2%;
   background-color: rgba(0,0,0,0.2);
 }
 
 .zip-code-change{
-  width: 35%;
-  margin-left: auto;
-  margin-right: auto;
   margin-top: -15%;
   padding-left: 8px;
   padding-bottom: 10px;
   background-color: rgba(0,0,0,0.2);
   border-radius: 15px;
+  text-align: center;
+  float: center;
 }
 
 .zipcode-button {
@@ -151,5 +152,9 @@ labelz {
 
 * {
   font-family: 'Open Sans Condensed', sans-serif;
+}
+
+.title {
+  font-size: 3em;
 }
 
