work on api call

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,7 +3,7 @@
 
 
 <div class="container" >
-  <div class='site-name white eight columns'>
+  <div class='site-name white nine columns'>
     <p class='title'>Who Says? Drew Says!</p>
   </div>
 
