--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,7 +13,7 @@
   -->
   <link rel="stylesheet" href="/css/application.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/responsive.gs.16col.css">
+  <link rel="stylesheet" href="/css/skeleton.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
