--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,8 +2,8 @@
 <%if !logged_in?%>
 
 
-<div class="container" >
-  <div class='site-name white nine columns'>
+<div class="container">
+  <div class='site-name white ten columns'>
     <p class='title'>Who Says? Drew Says!</p>
   </div>
 
@@ -14,15 +14,19 @@
   <div class='sign_upz five columns'>
     <%= erb :_sign_up, :layout => false%>
   </div>
-
-  <div class="beginning">
+<div class="beginning four columns">
    <h5 class="white">Don't want an account? Put your zipcode here!</h5>
-    <form >
+    <form>
       <input type='text' name="zip" id='zipcode'>
       <input type='submit' value='Get your outfit!' id='submit-zip'>
     </form>
   </div>
+
+
 </div>
+
+
+
 
 <%end%>
 
