--- a/app/views/landing_page.erb
+++ b/app/views/landing_page.erb
@@ -15,7 +15,7 @@
   </div>
 
 
-  <div class="zip-code-change white four columns">
+  <div class="zip-code-change white five columns">
     <p>Want to change your location?</p>
     <form action='/users/<%=@user.id%>' method="post">
       <input type='hidden' name='_method' value="put">
