--- a/public/css/skeleton.css
+++ b/public/css/skeleton.css
@@ -173,7 +173,7 @@ input[type="button"] {
   display: inline-block;
   height: 38px;
   padding: 0 30px;
-  color: #555;
+  /*color: #555;*/
   text-align: center;
   font-size: 11px;
   font-weight: 600;
@@ -182,7 +182,7 @@ input[type="button"] {
   text-transform: uppercase;
   text-decoration: none;
   white-space: nowrap;
-  background-color: transparent;
+  /*background-color: transparent;*/
   border-radius: 4px;
   border: 1px solid #bbb;
   cursor: pointer;
